changed color to fix contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -171,7 +171,7 @@ footer .copywrite {
 
 
 footer .modified {
-    color: rgb(255, 221, 0);
+    color: rgb(255, 252, 80);
     font-size: 13px;
     
 }
